Mobile: fix dialogs cut off by browser bar using 100dvh
Replace 100vh with 100dvh in edit-words and add-new-words dialogs
so the footer buttons are always visible on mobile browsers.

--- a/src/app/edit-words-dialog/edit-words-dialog.scss
+++ b/src/app/edit-words-dialog/edit-words-dialog.scss
@@ -1,13 +1,13 @@
 :host {
   display: block;
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
 }
 
 .ew-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100dvh;
   background: #282828;
   color: #fff;
 }
